force-app/main/default/objects/BatalhasContato__c/BatalhasContato__c.object-meta.xml
<CustomObject>
    <description>objeto de junção com as batalhas</description>
    <label>Batalhas Contato</label>
    <nameField>
        <displayFormat>Skill-{000000000}</displayFormat>
        <label>Batalhas do Contato</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batalhas Contatos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>