force-app/main/default/objects/BatalhasContato__c/fields/Batalha__c.field-meta.xml
<CustomField>
    <fullName>Batalha__c</fullName>
    <description>relacionamento com as  batalhas</description>
    <inlineHelpText>relacionamento com as  batalhas</inlineHelpText>
    <label>Batalha</label>
    <referenceTo>Batalha__c</referenceTo>
    <relationshipLabel>Batalhas Contatos</relationshipLabel>
    <relationshipName>BatalhasContatos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>