force-app/main/default/objects/BatalhasContato__c/fields/Contato__c.field-meta.xml
<CustomField>
    <fullName>Contato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>relacionamento com o contato</description>
    <inlineHelpText>relacionamento com o contato</inlineHelpText>
    <label>Contato</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Batalhas Contatos</relationshipLabel>
    <relationshipName>BatalhasContatos</relationshipName>
    <type>Lookup</type>
</CustomField>