force-app/main/default/objects/BatalhasContato__c/fields/Papelnabatalha__c.field-meta.xml
<CustomField>
    <fullName>Papelnabatalha__c</fullName>
    <description>Define o Papel de batalha</description>
    <formula>if (Contato__r.RecordType.DeveloperName =&apos;Heroi&apos;,&apos;Proteger&apos;,&apos;Destruir&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Define o Papel de batalha</inlineHelpText>
    <label>Papel na batalha</label>
    <type>Text</type>
</CustomField>